Photos, inline upload and cropping #535: readjusted gallery height, fixed a minor bug with upload-to-edit-blocked edition because of not primary photo.

--- a/web/Styles/app/dashboard/photos.styl
+++ b/web/Styles/app/dashboard/photos.styl
@@ -68,8 +68,8 @@
         list-style: none;
         padding: 0;
         margin: 0;
-        /* height: 100% works fine in Firefox, but not in Chrome (webkit) and IE, setting to static 349px */
-        height: 420px;
+        /* height: 100% works fine in Firefox, but not in Chrome (webkit) and IE, setting a fixed one */
+        height: 442px;
         overflow: auto;
     }
     .positionphotos-gallery li {
