--- a/web/Styles/dashboard.css
+++ b/web/Styles/dashboard.css
@@ -3906,8 +3906,8 @@ form ul li {
   list-style: none;
   padding: 0;
   margin: 0;
-/* height: 100% works fine in Firefox, but not in Chrome (webkit) and IE, setting to static 349px */
-  height: 420px;
+/* height: 100% works fine in Firefox, but not in Chrome (webkit) and IE, setting a fixed one */
+  height: 442px;
   overflow: auto;
 }
 
